--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -1,3 +1,4 @@
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
+google-auth==2.18.0
+google-auth-oauthlib==0.4.6
+google-auth-httplib2==0.1.0
+google-api-python-client
