--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -3,5 +3,4 @@ google-auth-oauthlib==0.4.6
 google-auth-httplib2==0.1.0
 google-api-python-client
 plotly==5.24.1
-gspread==6.1.4
-oauth2client==4.1.3
+#matplotlib==3.10.0
